# rust-depedency-injection-design

./: .gitignore  Design.md  LICENSE  README.md  Requirements.md
crates/auto-cast-as-struct-member-example/: Cargo.toml  license.html
crates/auto-cast-as-struct-member-example/src/: current_resistance.rs  lib.rs  main.rs  volume.rs
crates/example-of-injector-mutable-borrow-challenge/: Cargo.toml
crates/example-of-injector-mutable-borrow-challenge/src/: main.rs
crates/web-page-hash-explicit-arguments/: Cargo.toml  license.html
crates/web-page-hash-explicit-arguments/src/: lib.rs  main.rs
crates/web-page-hash-explicit-arguments/src/http_client_service/: interface.rs  (+1 more)
crates/web-page-hash-injector-parameter/: Cargo.toml  license.html
crates/web-page-hash-injector-parameter/src/: lib.rs  main.rs
crates/web-page-hash-using-cgp/: Cargo.toml  license.html
crates/web-page-hash-using-cgp/src/: main.rs
crates/web-page-hash-using-cgp/src/calculate_web_page_message_digest_service/: implementation.rs  interface.rs
crates/web-page-hash-using-cgp/src/http_client_service/: interface.rs  reqwest_http_client_service.rs
crates/web-page-hash-using-cgp/src/message_digest_service/: interface.rs  sha3_message_digest_service.rs
crates/web-page-hash-using-explicit-arguments/: Cargo.toml  about.toml  license.html
crates/web-page-hash-using-explicit-arguments/src/: lib.rs  main.rs
crates/web-page-hash-using-explicit-arguments/src/calculate_web_page_message_digest_service/: implementation.rs  mod.rs
crates/web-page-hash-using-explicit-arguments/src/http_client_service/: mod.rs
crates/web-page-hash-using-explicit-arguments/src/message_digest_service/: mod.rs
crates/web-page-hash-using-injector-parameter/: Cargo.toml  license.html
crates/web-page-hash-using-injector-parameter/src/: main.rs
doc/techniques/: delegating-trait-impl-to-struct-member.md
(+7 files in other folders)
