[package]
name = "web-page-hash-using-cgp"
description = """\
    A demo implementation of a Web page 256-bit SHA-3 hash calculator as an \
    injectable service using Context-Generic Programming (`cgp` crate)\
    """
authors = ["Pavel Penev <pavpen@gmail.com>"]
license = "MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytes = "1.10.1"
cgp = "0.6.0"
cgp-error-anyhow = "0.6.0"
clap = { version = "4.5.50", features = ["derive"] }
futures-core = "0.3.31"
futures-util = "0.3.31"
reqwest = { version = "0.12.24", features = ["stream"] }
sha3 = "0.10.8"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
trait-variant = "0.1.2"
